Handle "form" attribute updates in parseMappedAttribute() instead of attributeChanged() to better match HTMLElement practices https://bugs.webkit.org/show_bug.cgi?id=66321

Reviewed by Darin Adler.

Source/WebCore:

This is simply a cleanup change: there's no need that I can see for
HTMLFormControlElement and HTMLObjectElement to override
Element::attributeChanged since they can properly handle form
attribute changes in parseMappedAttribute, which they also override.

Though no change in behavior, I've added test coverage of the moved
code to an existing test (fast/forms/form-attribute.html) and added
a new test.

Test: fast/forms/radio-remove-form-attr.html

* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::parseMappedAttribute):
* html/HTMLFormControlElement.h:
* html/HTMLObjectElement.cpp:
(WebCore::HTMLObjectElement::parseMappedAttribute):
* html/HTMLObjectElement.h:

LayoutTests:

Added new coverage to ensure that adding a radio button to a radio
group in the document by removing a form attribute leaves the group in
a valid state (no more than one button checked).

Beefed up coverage of form associated elements to better cover
HTMLObjectElement.

* fast/forms/form-attribute-expected.txt:
* fast/forms/radio-remove-form-attr-expected.txt: Added.
* fast/forms/radio-remove-form-attr.html: Added.
* fast/forms/script-tests/form-attribute.js:
Added coverage of <object form=""> behavior.


Canonical link: https://commits.webkit.org/82288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93292 268f45cc-cd09-0410-ab3c-d52691b4dbfc